--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ EXPO_PUBLIC_FIREBASE_PROJECT_ID=linkranger-b096e
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=linkranger-b096e.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=823369241471
 EXPO_PUBLIC_FIREBASE_APP_ID=1:823369241471:web:bb7c7fe8eb21c3ba09c04a
+
+GEMINI_API_KEY=AIzaSyD8QS_cHUrsosdJW5Va4eHT1slm5WdFqfU
