--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-safe-area-context": "^5.5.0",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
