--- a/.env
+++ b/.env
@@ -7,3 +7,13 @@ EXPO_PUBLIC_FIREBASE_APP_ID=1:823369241471:web:bb7c7fe8eb21c3ba09c04a
 
 # GEMINI_API_KEY=AIzaSyD8QS_cHUrsosdJW5Va4eHT1slm5WdFqfU
 GEMINI_API_KEY=AIzaSyAC4anmQgOgwDsVoXXBq2ka0begpgEq-E4
+
+# テストアカウント設定
+# 開発時: true, 本番リリース時: false に変更
+EXPO_PUBLIC_ENABLE_TEST_ACCOUNTS=true
+
+# 開発者メールアドレス（テスト用、カンマ区切り）
+EXPO_PUBLIC_DEVELOPER_EMAILS=tatsu0823takasago@icloud.com
+
+# デバッグ設定（本番リリース時は false に変更）
+EXPO_PUBLIC_DEBUG_MODE=true 
