--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
+    "@stripe/stripe-react-native": "^0.50.1",
     "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
@@ -24,7 +25,8 @@
     "react-native-gesture-handler": "^2.26.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.12.1",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
