--- a/functions/.env
+++ b/functions/.env
@@ -1,1 +1,8 @@
-GEMINI_API_KEY=AIzaSyD8QS_cHUrsosdJW5Va4eHT1slm5WdFqfU
+# Firebase Functions環境変数設定
+
+# Stripe設定
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Gemini API設定
+GEMINI_API_KEY=AIzaSyAC4anmQgOgwDsVoXXBq2ka0begpgEq-E4
