--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
+    "start:dev": "expo start --dev-client",
+    "start:tunnel": "expo start --tunnel",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:dev": "eas build --profile development --platform ios",
+    "build:preview": "eas build --profile preview --platform ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -27,6 +31,7 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.1",
