--- a/env.example
+++ b/env.example
@@ -1,12 +1,18 @@
-# Stripe設定
-EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Apple課金設定（App Store Connectで設定）
+# 商品IDはApp Store Connectで作成後に設定
+# EXPO_PUBLIC_APPLE_PLUS_PRODUCT_ID=com.tat22444.wink.plus.monthly
+# EXPO_PUBLIC_APPLE_PRO_PRODUCT_ID=com.tat22444.wink.pro.monthly
 
-# Stripe価格ID（Stripeダッシュボードで作成後に設定）
-EXPO_PUBLIC_STRIPE_PLUS_MONTHLY_PRICE_ID=price_plus_monthly_id
-EXPO_PUBLIC_STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_monthly_id
+# Firebase設定
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyCy0GMV6rjbI5kuHlsikcjtmRAvh0fCoBw
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=linkranger-b096e.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=linkranger-b096e
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=linkranger-b096e.firebasestorage.app
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=823369241471
+EXPO_PUBLIC_FIREBASE_APP_ID=1:823369241471:ios:fbe4aabdbcff92f509c04a
 
 # Firebase Functions URL
-EXPO_PUBLIC_FIREBASE_FUNCTIONS_URL=https://your-region-your-project-id.cloudfunctions.net
+EXPO_PUBLIC_FIREBASE_FUNCTIONS_URL=https://asia-northeast1-linkranger-b096e.cloudfunctions.net
 
 # Gemini API設定
 EXPO_PUBLIC_GEMINI_API_KEY=your_gemini_api_key_here
