--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
-    "@stripe/stripe-react-native": "^0.50.1",
+
     "expo": "~53.0.13",
     "expo-auth-session": "~6.2.1",
     "expo-crypto": "~14.1.5",
@@ -31,11 +31,11 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-iap": "^13.0.4",
     "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.1",
-    "stripe": "^18.4.0"
+    "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
