--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
-
     "expo": "~53.0.13",
+    "expo-apple-authentication": "~7.2.4",
     "expo-auth-session": "~6.2.1",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "^5.2.4",
