--- a/ios/Wink/Info.plist
+++ b/ios/Wink/Info.plist
@@ -27,6 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>wink</string>
           <string>com.tat22444.wink</string>
         </array>
       </dict>
@@ -44,7 +45,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>11</string>
+    <string>14</string>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
@@ -56,6 +57,8 @@
       <key>NSAllowsArbitraryLoads</key>
       <true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>このアプリはカメラ機能を使用しませんが、一部のライブラリがカメラAPIを参照しています。</string>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
@@ -82,7 +85,5 @@
     <string>Light</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
-    <key>NSCameraUsageDescription</key>
-    <string>このアプリはカメラ機能を使用しませんが、一部のライブラリがカメラAPIを参照しているため、この説明が必要です。</string>
   </dict>
 </plist>
