--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
@@ -22,21 +22,25 @@
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.13",
     "expo-apple-authentication": "~7.2.4",
+    "expo-application": "^6.1.5",
     "expo-auth-session": "~6.2.1",
+    "expo-background-fetch": "~13.1.6",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "^5.2.4",
+    "expo-device": "^7.1.4",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~13.1.6",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "react": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.26.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-iap": "^13.0.4",
     "react-native-modalize": "^2.1.1",
-    "react-native-safe-area-context": "^5.5.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.1"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
