--- a/eas.json
+++ b/eas.json
@@ -7,7 +7,24 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {},
+    "production": {
+      "distribution": "store",
+      "ios": {
+        "resourceClass": "m-medium"
+      },
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyDBBmzhcYmkUQk3oJdNTTm0AB-k2yA9bXM",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "linkranger-b096e.firebaseapp.com",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "linkranger-b096e",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "linkranger-b096e.firebasestorage.app",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "823369241471",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "1:823369241471:ios:fbe4aabdbcff92f509c04a",
+        "EXPO_PUBLIC_ENABLE_TEST_ACCOUNTS": "false",
+        "EXPO_PUBLIC_DEVELOPER_EMAILS": "tatsu0823takasago@icloud.com",
+        "EXPO_PUBLIC_DEBUG_MODE": "false",
+        "EXPO_NO_CAPABILITY_SYNC": "1"
+      }
+    },
     "testflight": {
       "distribution": "store",
       "ios": {
@@ -20,6 +37,8 @@
         "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "linkranger-b096e.firebasestorage.app",
         "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "823369241471",
         "EXPO_PUBLIC_FIREBASE_APP_ID": "1:823369241471:ios:fbe4aabdbcff92f509c04a",
+        "EXPO_PUBLIC_ENABLE_TEST_ACCOUNTS": "true",
+        "EXPO_PUBLIC_DEVELOPER_EMAILS": "tatsu0823takasago@icloud.com",
         "EXPO_NO_CAPABILITY_SYNC": "1"
       }
     }
