--- a/ios/Wink/Info.plist
+++ b/ios/Wink/Info.plist
@@ -25,11 +25,24 @@
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
+        <key>CFBundleURLName</key>
+        <string>wink.share</string>
         <key>CFBundleURLSchemes</key>
         <array>
           <string>wink</string>
-          <string>com.tat22444.wink</string>
         </array>
+        <key>CFBundleURLIconFile</key>
+        <string>icon</string>
+      </dict>
+      <dict>
+        <key>CFBundleURLName</key>
+        <string>wink.universal</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>https</string>
+        </array>
+        <key>CFBundleURLIconFile</key>
+        <string>icon</string>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
@@ -45,7 +58,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>18</string>
+    <string>21</string>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
@@ -59,6 +72,10 @@
     </dict>
     <key>NSCameraUsageDescription</key>
     <string>このアプリはカメラ機能を使用しませんが、一部のライブラリがカメラAPIを参照しています。</string>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>fetch</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
