--- a/functions/.env
+++ b/functions/.env
@@ -5,4 +5,8 @@ STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 # Gemini API設定
-GEMINI_API_KEY=AIzaSyAC4anmQgOgwDsVoXXBq2ka0begpgEq-E4
+GEMINI_API_KEY=AIzaSyDMrV8d0OryMaa394Xii2mhbLUhs9hoBxc
+
+# Apple App Store設定
+# NOTE: Apple Store Connectから取得したShared Secretを設定してください
+APPLE_SHARED_SECRET=add5e91813d041169287542930c473c8
