--- a/functions/env.example
+++ b/functions/env.example
@@ -5,4 +5,7 @@ STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 # Gemini API設定
-GEMINI_API_KEY=your_gemini_api_key_here 
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Apple App Store Connect (App-Specific Shared Secret)
+APPLE_SHARED_SECRET=your_apple_shared_secret_here 
