--- a/functions/package.json
+++ b/functions/package.json
@@ -21,11 +21,13 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "isomorphic-dompurify": "^2.26.0",
+    "node-apple-receipt-verify": "^1.15.0",
     "stripe": "^18.4.0",
     "url-parse": "^1.5.10",
     "validator": "^13.15.15"
   },
   "devDependencies": {
+    "@types/node-apple-receipt-verify": "^1.7.5",
     "@types/url-parse": "^1.4.11",
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
