--- a/app.json
+++ b/app.json
@@ -4,7 +4,10 @@
     "scheme": "wink",
     "slug": "Wink",
     "linking": {
-      "prefixes": ["wink://", "https://www.dot-wink.com"],
+      "prefixes": [
+        "wink://",
+        "https://www.dot-wink.com"
+      ],
       "config": {
         "screens": {
           "Main": {
@@ -30,7 +33,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tat22444.wink",
-      "buildNumber": "22",
+      "buildNumber": "23",
       "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
         "googleSignIn": {
@@ -46,12 +49,16 @@
         "CFBundleURLTypes": [
           {
             "CFBundleURLName": "wink.share",
-            "CFBundleURLSchemes": ["wink"],
+            "CFBundleURLSchemes": [
+              "wink"
+            ],
             "CFBundleURLIconFile": "icon"
           },
           {
             "CFBundleURLName": "wink.universal",
-            "CFBundleURLSchemes": ["https"],
+            "CFBundleURLSchemes": [
+              "https"
+            ],
             "CFBundleURLIconFile": "icon"
           }
         ],
@@ -66,14 +73,20 @@
           {
             "CFBundleTypeName": "Web URL",
             "CFBundleTypeRole": "Viewer",
-            "LSItemContentTypes": ["public.url"],
+            "LSItemContentTypes": [
+              "public.url"
+            ],
             "LSHandlerRank": "Alternate"
           }
         ]
       },
       "entitlements": {
-        "com.apple.developer.applesignin": ["Default"],
-        "com.apple.developer.associated-domains": ["applinks:www.dot-wink.com"]
+        "com.apple.developer.applesignin": [
+          "Default"
+        ],
+        "com.apple.developer.associated-domains": [
+          "applinks:www.dot-wink.com"
+        ]
       },
       "backgroundModes": [
         "background-fetch"
@@ -101,7 +114,10 @@
               "host": "www.dot-wink.com"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         },
         {
           "action": "SEND",
@@ -129,7 +145,18 @@
         }
       ],
       "expo-background-fetch",
-      "expo-task-manager"
+      "expo-task-manager",
+      [
+        "expo-share-extension",
+        {
+          "bundleIdentifier": "com.tat22444.wink.share-extension",
+          "activationRules": {
+            "NSExtensionActivationSupportsWebURLWithMaxCount": 1,
+            "NSExtensionActivationSupportsWebPageWithMaxCount": 1
+          },
+          "extensionName": "Wink Share"
+        }
+      ]
     ],
     "extra": {
       "eas": {
