--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-task-manager": "~13.1.6",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
