--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/config-plugins": "^10.1.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
