--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-dev-client": "^5.2.4",
     "expo-device": "^7.1.4",
     "expo-notifications": "~0.31.4",
+    "expo-router": "^5.1.4",
     "expo-share-extension": "^4.0.1",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
@@ -42,7 +43,8 @@
     "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-build-properties": "~0.14.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
