--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.13",
     "expo-apple-authentication": "~7.2.4",
     "expo-application": "^6.1.5",
     "expo-auth-session": "~6.2.1",
     "expo-background-fetch": "~13.1.6",
+    "expo-build-properties": "~0.14.8",
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "^5.2.4",
     "expo-device": "^7.1.4",
@@ -41,15 +42,15 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-iap": "^13.0.4",
     "react-native-modalize": "^2.1.1",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "expo-build-properties": "~0.14.8"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/config-plugins": "^10.1.2",
     "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "^19.1.0",
     "typescript": "~5.8.3"
   },
   "private": true
