--- a/ios/Wink/Info.plist
+++ b/ios/Wink/Info.plist
@@ -27,24 +27,11 @@
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
-        <key>CFBundleURLName</key>
-        <string>wink.share</string>
         <key>CFBundleURLSchemes</key>
         <array>
           <string>wink</string>
+          <string>com.tat22444.wink</string>
         </array>
-        <key>CFBundleURLIconFile</key>
-        <string>icon</string>
-      </dict>
-      <dict>
-        <key>CFBundleURLName</key>
-        <string>wink.universal</string>
-        <key>CFBundleURLSchemes</key>
-        <array>
-          <string>https</string>
-        </array>
-        <key>CFBundleURLIconFile</key>
-        <string>icon</string>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
@@ -60,7 +47,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>44</string>
+    <string>59</string>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
@@ -74,10 +61,6 @@
     </dict>
     <key>NSCameraUsageDescription</key>
     <string>このアプリはカメラ機能を使用しませんが、一部のライブラリがカメラAPIを参照しています。</string>
-    <key>NSUserActivityTypes</key>
-    <array>
-      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-    </array>
     <key>UIBackgroundModes</key>
     <array>
       <string>fetch</string>
