--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.25",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.13",
     "expo-apple-authentication": "~7.2.4",
@@ -31,7 +31,7 @@
     "expo-device": "^7.1.4",
     "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
-    "expo-share-extension": "^4.0.1",
+    "expo-share-extension": "~4.0.1",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
     "firebase": "^11.10.0",
@@ -42,7 +42,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-iap": "^13.0.4",
     "react-native-modalize": "^2.1.1",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2"
   },
