--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-mail-composer": "~14.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
