--- a/functions/env.example
+++ b/functions/env.example
@@ -8,4 +8,9 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Apple App Store Connect (App-Specific Shared Secret)
-APPLE_SHARED_SECRET=your_apple_shared_secret_here 
+APPLE_SHARED_SECRET=your_apple_shared_secret_here
+
+# Apple App Store Server Notifications V2 (JWS Signature Verification)
+# 本番環境での完全な署名検証に使用
+APPLE_PUBLIC_KEY_ENDPOINT=https://api.storekit.itunes.apple.com/inApps/v1/lookup/order/placeholder
+APPLE_SANDBOX_PUBLIC_KEY_ENDPOINT=https://api.storekit-sandbox.itunes.apple.com/inApps/v1/lookup/order/prefix 
