--- a/functions/package.json
+++ b/functions/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "isomorphic-dompurify": "^2.26.0",
+    "jose": "^6.0.13",
     "node-apple-receipt-verify": "^1.15.0",
     "stripe": "^18.4.0",
     "url-parse": "^1.5.10",
