--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^23.1.2",
+    "@react-native-firebase/messaging": "^23.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -29,6 +31,7 @@
     "expo-crypto": "~14.1.5",
     "expo-dev-client": "^5.2.4",
     "expo-device": "^7.1.4",
+    "expo-mail-composer": "~14.1.6",
     "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
     "expo-share-extension": "~4.0.1",
@@ -44,8 +47,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "expo-mail-composer": "~14.1.6"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
