--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/tasks": "^5.2.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
