--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ firebase-debug.*.log
 firebase-debug.log.*
 firebase-debug.log.*.log
 
+# Firebase Functions build output
+functions/lib
+
 # Logs
 *.log
 logs/
