--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# 本番環境用設定
 EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyDBBmzhcYmkUQk3oJdNTTm0AB-k2yA9bXM
 EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=linkranger-b096e.firebaseapp.com
 EXPO_PUBLIC_FIREBASE_PROJECT_ID=linkranger-b096e
@@ -5,12 +6,11 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=linkranger-b096e.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=823369241471
 EXPO_PUBLIC_FIREBASE_APP_ID=1:823369241471:ios:fbe4aabdbcff92f509c04a
 
-# テストアカウント設定
-# 開発時: true, 本番リリース時: false に変更
-EXPO_PUBLIC_ENABLE_TEST_ACCOUNTS=true
+GEMINI_API_KEY=AIzaSyAC4anmQgOgwDsVoXXBq2ka0begpgEq-E4
 
-# 開発者メールアドレス（テスト用、カンマ区切り）
-EXPO_PUBLIC_DEVELOPER_EMAILS=tatsu0823takasago@icloud.com
+# 本番環境設定：テストアカウント機能を無効化
+EXPO_PUBLIC_ENABLE_TEST_ACCOUNTS=false
+EXPO_PUBLIC_DEVELOPER_EMAILS=
 
-# デバッグ設定（本番リリース時は false に変更）
-EXPO_PUBLIC_DEBUG_MODE=true 
+# 本番環境：デバッグモード無効化
+EXPO_PUBLIC_DEBUG_MODE=false
